--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,21 @@ h1, h2, h3, h4, h5, h6 {
   animation: animate-preloader 1s linear infinite;
 }
 
+#wrap {
+  width: 320px;
+  height: 320px;
+  -moz-border-radius: 10px;
+  background: red;
+  position: relative;
+}
+iframe {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
 @-webkit-keyframes animate-preloader {
   0% {
     transform: rotate(0deg);
